# Stellaium.Order-1

./: .gitignore  main.py  pyproject.toml
stellaium/order_1/: __init__.py
stellaium/order_1/commands/: ping.py
stellaium/order_1/github/: __init__.py  config.py
stellaium/order_1/github/commands/: repo.py
stellaium/order_1/github/resources/: simple_repo_info.gql
stellaium/order_1/utllles/: hocon_config.py
